// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Component base should return a Text object with base styling 1`] = `
.c0 {
  font-family: inherit;
  font-size: 100%;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<span
  className="c0"
>
  Lorem Ipsum
</span>
`;

exports[`Text Component specified styles should return a Text object with a specified color 1`] = `
.c0 {
  font-family: inherit;
  font-size: 100%;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: hsl(122.4,39.4%,69.2%);
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<span
  className="c0"
>
  Lorem Ipsum
</span>
`;

exports[`Text Component specified styles should return a Text object with a specified text-align 1`] = `
.c0 {
  font-family: inherit;
  font-size: 100%;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: right;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<span
  className="c0"
>
  Lorem Ipsum
</span>
`;

exports[`Text Component specified styles should return a Text object with a specified text-decoration 1`] = `
.c0 {
  font-family: inherit;
  font-size: 100%;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<span
  className="c0"
>
  Lorem Ipsum
</span>
`;

exports[`Text Component specified styles should return a Text object with font-size: lg 1`] = `
.c0 {
  font-family: inherit;
  font-size: 120%;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<span
  className="c0"
>
  Lorem Ipsum
</span>
`;

exports[`Text Component specified styles should return a Text object with font-size: sm 1`] = `
.c0 {
  font-family: inherit;
  font-size: 80%;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<span
  className="c0"
>
  Lorem Ipsum
</span>
`;

exports[`Text Component specified styles should return a Text object with font-style: italic 1`] = `
.c0 {
  font-family: inherit;
  font-size: 100%;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  font-style: italic;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<span
  className="c0"
>
  Lorem Ipsum
</span>
`;

exports[`Text Component specified styles should return a Text object with specified font-family 1`] = `
.c0 {
  font-family: Consolas,"Andale Mono WT","Andale Mono","Lucida Console","Lucida Sans Typewriter","DejaVu Sans Mono","Bitstream Vera Sans Mono","Liberation Mono","Nimbus Mono L",Monaco,"Courier New",Courier,monospace;
  font-size: 100%;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<span
  className="c0"
>
  Lorem Ipsum
</span>
`;

exports[`Text Component specified styles should return a Text object with specified font-weight 1`] = `
.c0 {
  font-family: inherit;
  font-size: 100%;
  font-weight: bolder;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<span
  className="c0"
>
  Lorem Ipsum
</span>
`;

exports[`Text Component specified styles should return a Text object with specified kerning 1`] = `
.c0 {
  font-family: inherit;
  font-size: 100%;
  font-weight: inherit;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<span
  className="c0"
>
  Lorem Ipsum
</span>
`;
